web-app/css/regions.css
/* Bootstrap customization */
.breadcrumb {
    margin-bottom: 0;
}

.text-right {
    text-align: right !important;
}

.text-left {
    text-align: left !important;
}

.text-center {
    text-align: center !important;
}

#region-map img {
    max-width: none;
}

#region-map label {
    width: auto; display:inline;
}

/* Common */
.link {
    cursor: pointer;
}

.hidden {
    display: none;
}

.nav-tabs li a {
    background-color: #f0f0e8;
    border: 1px solid #ddd;
    margin-right: 3px;
}

/************************************************************************************\
| Regions page
\************************************************************************************/
/* regions front page */

#header h1 {
    padding-left: 0 !important;
}

#map_canvas {
    height: 470px;
    border: 1px solid black;
    margin: 9px 0 0 0;
}

#accordion {
    margin: 9px 0 0 5px;
    height: 446px;
}

#accordion h2 a {
    font-size: 15px;
    color: #333;
}

#accordion ul {
    list-style: none;
    margin: 0;
    font-size: 1em;
}

.ui-widget {
    font-family: Verdana, Arial, sans-serif !important;
}

#click-info {
    font-size: 15px;
}

#zoomTo, #reset-map {
    padding-left: 20px;
    font-size: 12px;
    color: #666;
    cursor: pointer;
}

li.regionLink {
    cursor: pointer;
}

.ui-accordion-content li.selected {
    font-weight: bold;
}

#extra {
    padding-left: 20px;
    font-size: 14px;
}

/************************************************************************************\
| Region page
\************************************************************************************/

#emblems .span3 {
    margin-bottom: 0;
}

#emblems .thumbnail {
    box-shadow: 3px 3px 8px 0px rgba(50, 50, 50, 0.7);
}

#emblems a {
    color: inherit;
}

#emblems a:hover {
    text-decoration: none;
    color: inherit;
}

#region-map {
    width: 100%;
    height: 480px;
    border: 1px solid #dddddd;
}

#species .scrollContent {
    height: 400px;
}

#explorerTabs {
    margin-bottom: .6em;
}

#groups, #species {
    height: 560px;
    max-height: 560px;
}

#groups thead, #species thead{
    height: 30px;
    border-bottom: 1px solid #dddddd;
}

#species thead tr, #groups thead tr {
    display: block;
    position: relative;
    width: 100%;
}

#groups tbody, #species tbody {
    height: 530px;
    max-height: 530px;
    display: block;
    overflow-y: auto;
}

#groups tbody td, #species tbody td {
    border: 0;
}

#groups td, #species td {
    padding: 1px 1.5em 1px 1em;
    font-size: .9em;
}

#species tbody .spinner, #groups tbody .spinner {
    display: block;
    height: 99.5%;
}

#species tbody td.spinner i, #groups tbody td.spinner i {
    margin-top: 230px !important;
}

#groups {
    border-right: 1px solid #dddddd;
    float: left;
    table-layout: fixed;
    width: 45%;
}

#groups thead th {
    display:inherit;
}

#groups tbody tr {
    display: block;
}

#groups tbody td {
    display: inherit;
}

#groups td.level0 {
    font-weight: bold;
}

#groups td.level1 {
    padding-left: 2em;
}

#species {
    float: right;
    table-layout: fixed;
    width: 55%;
}

#species thead th:first-child {
    width: 85%;
}

#species td:first-child {
    padding-right: 0;
}

#species tbody tr.link td:first-child {
    width: 5%;
}

#species tr.infoRowLinks {
    background-color: #F0F0E8;
}

#species tr.infoRowLinks td{
    padding-bottom: 3px;
}

tr.groupSelected, tr.groupSelected:hover td {
    background-color: #DF4A21 !important;
    color: white;
}

tr.speciesSelected, tr.speciesSelected:hover td {
    background-color: #DF4A21 !important;
    color: white;
}

#showMoreSpeciesButton {
    min-width: 60%;
}

#controlsMapTab {
    margin-bottom: 7px;
}

#timeControls {
    margin-bottom: 2.5em;
}

#timeSlider .ui-slider-label {
    font-size: .8em;
}

#timeSlider .ui-slider-handle {
    cursor: pointer;
}

#timeRange {
    text-align: center;
    margin-top: 1.6em;
}

#timeButtons {
    height: 2.5em;
}

img.timeControl {
    width: 2em;
    padding-right: .8em;
    padding-top: .1em;
}

